--- a/Proyect_P3/Proyect_P3.csproj
+++ b/Proyect_P3/Proyect_P3.csproj
@@ -233,6 +233,7 @@
     <Content Include="Views\Shared\_LayoutApp.cshtml" />
     <Content Include="Views\Acceder\Login.cshtml" />
     <Content Include="Views\User\Add.cshtml" />
+    <Content Include="Views\User\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
