--- a/Proyect_P3/Proyect_P3.csproj
+++ b/Proyect_P3/Proyect_P3.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
@@ -168,6 +169,7 @@
     <Compile Include="Models\ViewModels\QueryViewModels.cs" />
     <Compile Include="Models\ViewModels\TipdocQueryViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\PdfGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
