--- a/Proyect_P3/Proyect_P3.csproj
+++ b/Proyect_P3/Proyect_P3.csproj
@@ -141,14 +141,21 @@
     <Compile Include="Controllers\TipdocController.cs" />
     <Compile Include="Controllers\TiposController.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="Controllers\VehiculosController.cs" />
     <Compile Include="Filters\VerificaSession.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Metodos\ArticulosFotosMetodos.cs" />
     <Compile Include="Metodos\CategoriasMetodos.cs" />
     <Compile Include="Metodos\Conexion.cs" />
     <Compile Include="Metodos\MarcasMetodos.cs" />
+    <Compile Include="Metodos\MotoresMetodos.cs" />
     <Compile Include="Metodos\TiposMetodos.cs" />
+    <Compile Include="Metodos\VehiculosMetodos.cs" />
+    <Compile Include="Models\ARTICULOSFOTO.cs">
+      <DependentUpon>DBmodel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\CATEGORIA.cs">
       <DependentUpon>DBmodel.tt</DependentUpon>
     </Compile>
@@ -176,6 +183,12 @@
     <Compile Include="Models\mSTATU.cs">
       <DependentUpon>DBmodel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Municipio.cs">
+      <DependentUpon>DBmodel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Provincia.cs">
+      <DependentUpon>DBmodel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\TIPDOC.cs">
       <DependentUpon>DBmodel.tt</DependentUpon>
     </Compile>
@@ -185,13 +198,19 @@
     <Compile Include="Models\USER.cs">
       <DependentUpon>DBmodel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\VEHICULO.cs">
+      <DependentUpon>DBmodel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\ViewModels\ArticulosFotos.cs" />
     <Compile Include="Models\ViewModels\Categorias.cs" />
     <Compile Include="Models\ViewModels\Marcas.cs" />
     <Compile Include="Models\ViewModels\Motores.cs" />
+    <Compile Include="Models\ViewModels\Municipios.cs" />
+    <Compile Include="Models\ViewModels\Provincias.cs" />
     <Compile Include="Models\ViewModels\QueryViewModels.cs" />
     <Compile Include="Models\ViewModels\TipdocQueryViewModels.cs" />
     <Compile Include="Models\ViewModels\Tipos.cs" />
+    <Compile Include="Models\ViewModels\Vehiculos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\PdfGenerator.cs" />
   </ItemGroup>
@@ -266,7 +285,6 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\User\Query.cshtml" />
     <Content Include="Views\Shared\_LayoutApp.cshtml" />
     <Content Include="Views\Acceder\Login.cshtml" />
@@ -280,11 +298,11 @@
     <Content Include="Views\Marcas\Marcas.cshtml" />
     <Content Include="Views\Catalogo\Catalogo.cshtml" />
     <Content Include="Views\Categorias\Categorias.cshtml" />
+    <Content Include="Views\Vehiculos\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\CerrarSeccion\" />
-    <Folder Include="Views\Vehiculos\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
