--- a/Proyect_P3/Proyect_P3.csproj
+++ b/Proyect_P3/Proyect_P3.csproj
@@ -295,7 +295,7 @@
     <Content Include="Views\Marcas\Marcas.cshtml" />
     <Content Include="Views\Catalogo\Catalogo.cshtml" />
     <Content Include="Views\Categorias\Categorias.cshtml" />
-    <Content Include="Views\Vehiculos\Index.cshtml" />
+    <Content Include="Views\Vehiculos\index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
